tests/baselines/reference/optionalChainingInParameterInitializer.2(target=es2015).errors.txt
tests/cases/conformance/expressions/optionalChaining/optionalChainingInParameterInitializer.2.ts(3,7): error TS2373: Parameter 'b' cannot reference identifier 'a' declared after it.
tests/cases/conformance/expressions/optionalChaining/optionalChainingInParameterInitializer.2.ts(6,19): error TS2373: Parameter 'd' cannot reference identifier 'x' declared after it.


==== tests/cases/conformance/expressions/optionalChaining/optionalChainingInParameterInitializer.2.ts (2 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    const a = (): { d: string } | undefined => undefined;
    ((b = a()?.d) => { var a; })();
          ~
!!! error TS2373: Parameter 'b' cannot reference identifier 'a' declared after it.
    
    const x = "";
    ((b = a()?.d, d = x) => { var x; })();
                      ~
!!! error TS2373: Parameter 'd' cannot reference identifier 'x' declared after it.